# ai_assisted_research

./: CLAUDE.md  README.md  bcg_ltbi_simulation.py  bcg_transmission_model.py  gbd_trail_game.html
avnv_verify_test/: README.md  pyproject.toml  test_avnv_verify.py
bcg_meta_paper_exploration/: bcg_transmission_model.py
cancer_registry_pseudopeople_data_note/: 2026_02_05b_duckdb_psp_w_gbd_prevalence_2020_FL_and_psp_noise.ipynb  NOTES.md  data_note_outline.md
clustering_exploration/: .gitignore  README.md  data_multivariate.npz  data_univariate.npz  debug_clustering.py  explore_methods.py  generate_data.py  main.py  notes.md  pyproject.toml  test_clustering.py  test_mockseries.py
commute_dashboard/: GITHUB_ACTION_NOTES.md  README.md  index.html
cps_out_migration_research/: .gitignore  README.md  analyze_wa.py  asec_matching_method.py  cps_parse.py  download_data.py  entry_margin.py  fear_thermometer.py  link_months.py  make_fear_figure.py  make_figure.py  make_multiyear_figure.py  make_occind_figure.py  make_replication_figure.py  make_smallarea_figure.py  make_strata_figure.py  mexico_mirror.py  mirror_checks.py  run_multiyear.py  run_replication.py  small_area_states.py  test_link_months.py
docs/: gbd_trail_game.html  index.html
drug_research_tracker/: app.py  config.py  requirements.txt
eqpl_w_examples/: eqpl_w_examples.ipynb  eqpl_w_examples_R.ipynb
gavi_hss_analysis/: .gitignore  main.py  pyproject.toml
laser_environmental_outbreak/: README.md  components.py  run_sim.py  utils.py
minimal_anthrax_sim/: README.md  methods.md  pyproject.toml
minimal_anthrax_sim/notebooks/: methods.ipynb
mpld3_notes/: .gitignore  CLAUDE.md  README.md  test_pr536_figure_text.py  test_pr545_whitespace_preserve.py  test_pr68_logscale_fix.py
nhanes_cap_lsm/: .gitignore  README.md  analysis.py  cap_lsm_copula.py  cap_lsm_copula_by_agesex.py  cap_lsm_copula_slide_m60_80.py  copula_rho_by_agesex.csv  fib4_lsm_analysis.py  fib4_lsm_by_alcohol.py  fib4_sensspec.csv  fib4_sensspec_by_alcohol.csv  fib4_zones.csv  lsm_dist_by_alcohol.py  pyproject.toml  stage_prevalence_by_age_cap.csv  stage_prevalence_by_cap.csv
nhanes_mortality_fibrosis/: .gitignore  01_data_download.ipynb  03_pooled_analysis.ipynb  06_fib4_vs_lsm_comparison.ipynb  nhanes_fibrosis_mortality.ipynb  nhis_replication_feasibility.md
olmoearth_spike/: .gitignore  FEASIBILITY.md  README.md  extract_embeddings.py  fit_model.py  make_figure.py  olmoe.py  pyproject.toml  smoke_test.py
olmoearth_spike/docs/: RECON.md
olmoearth_spike/outputs/: embeddings.csv  m3_results.json
oud_data_exploration/: README.md
pocket_tts_demo/: .gitignore  FINE_TUNING_ANALYSIS.md  README.md  TRAINING_GUIDE.md  advanced_voice_mixer.py  convert_recording.py  create_custom_voice.py  explore_voice_state.py  interactive_tts.py  record_voice.py  requirements.txt  test_advanced_mixer.py  tts_demo.py  use_your_voice.py  verify_model_access.py
policy_behavioral_epidemic/: .gitignore  README.md  inference.py  model.py  pyproject.toml  results_summary.json  run_experiments.py  test_model.py
ppv_calculator/: NOTES.md  index.html
replay_demo/: .gitignore  ADMIN_FIX_NEEDED.md  ADMIN_OVERLAY_FIX.md  README.md  check_overlay_conflict.sh  diagnose_cuda_issue.sh  run_gpu_custom_path.sh  run_gpu_simple.sh  run_gpu_workaround.sh  run_seir_gpu.sh  run_with_full_nvidia.sh  sample_contacts.txt  seir_contact_simulation.py  seir_cuda.def  (+8 more)
simulation_methods_comparison/: .gitignore  README.md  abm_network.py  build_notebook.py  decision_tree.py  des_clinic.py  ode_sir.py  pyproject.toml  scenario.py  test_models.py  tour.ipynb
vitamin_d_t2dm_cea_replication/nhanes_cohort/: .gitignore  README.md  build_canonical_cohort.py  find_definition.py  pyproject.toml  reconstruct_cohort.py
vitamin_d_t2dm_cea_replication/nhanes_cohort/outputs/: cohort_canonical_n4176.csv  cohort_fasting_union.csv  cohort_mec_union.csv  definition_search.csv  table1_reconstructed.csv
vitamin_d_t2dm_cea_replication/simulation/: .gitignore  README.md  onset_model.py  onset_reversion_model.py  pyproject.toml  run_out.txt
vitamin_d_t2dm_cea_replication/simulation/outputs/: cea_results.csv  cea_results_reversion.csv
zero_n_inflated_binomial/: 01_numpyro_walkthrough.ipynb  02_compare_mcount.ipynb  03_treatment_effect_rct.ipynb  04_diagnostics_and_fixes.ipynb  README.md  build_diagnostics_notebook.py  build_notebooks.py  build_rct_notebook.py  coverage_sim.pkl  precompute_coverage.py  pyproject.toml  zni_binomial.py  zni_rct.py
(+81 files in other folders)
