[project]
name = "clustering-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.1",
    "mockseries>=0.3.1",
    "numpy>=1.26.3",
    "pandas>=2.3.3",
    "pypots>=1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
