[project]
name = "nhanes-cap-lsm"
version = "0.1.0"
description = "NHANES 2017-2020 liver stiffness (LSM) distribution by CAP steatosis threshold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyreadstat>=1.3.5",
    "requests>=2.34.2",
    "samplics>=0.6.0",
    "scipy>=1.17.1",
]
