[project]
name = "olmoearth-spike"
version = "0.1.0"
description = "Feasibility spike: OlmoEarth embeddings as areal-prediction covariates (open EO stand-in target)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Model loader (Apache-2.0 code; weights under OlmoEarth Artifact License)
    "olmoearth-pretrain-minimal==0.0.6",
    # CPU-only torch, pinned via the pytorch-cpu index below (keeps downloads modest)
    "torch>=2.7,<2.9",
    "numpy>=1.26.4",
    # M2/M3 data + downstream deps
    "requests>=2.31",
    "pystac-client>=0.8",
    "rasterio>=1.3",
    "shapely>=2.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
]

[tool.uv]
package = false

# Force CPU torch wheels instead of the default CUDA-bundled PyPI wheel.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
