[project]
name = "policy-behavioral-epidemic"
version = "0.1.0"
description = "Replication of a policy-informed behavioral-change stochastic epidemic model (Pathak, Pokharel & Hossain 2026)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
]
