[project]
name = "simulation-methods-comparison"
version = "0.1.0"
description = "Four lenses on an outbreak: ODE vs Decision Tree vs DES vs ABM"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "networkx>=3.2",
    "simpy>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
