[project]
name = "zero-n-inflated-binomial"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "jax<0.7",
    "jaxlib<0.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "numpyro<0.20",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "rpy2<3.6",
]
