[project]
name = "vitd-t2dm-onset-model"
version = "0.1.0"
description = "Reduced-form prevention front-end: vitamin D for T2D prevention CEA"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
]

# Run with:  uv run python onset_model.py
# Requires ../nhanes_cohort/outputs/cohort_canonical_n4176.csv (build it first).
